compiler/kernc_cli/tests/soundness/reject/supertraits/self_recursive_supertrait_cycle.kn
// class: proof-search-termination
// source: recursive trait hierarchy should not create an infinite supertrait proof chain
// stderr: trait supertrait hierarchy contains a cycle
// stderr: cycle: A -> A
// stderr: must form a DAG

struct Wrap[T] {
    inner: T,
};

trait A[T]: A[Wrap[T]] {
    fn value() i32;
};

struct X {};

impl &X: A[i32] {
    fn value() i32 {
        return 1;
    }
}

fn main() i32 {
    let x = X.{};
    let a = (x.& as &A[i32]);
    return a.value();
}
